dark mode is simply broken only on certain websites like this one, fixed circles in services sections which had a wrong z-index

--- a/styles/index/_services.scss
+++ b/styles/index/_services.scss
@@ -33,10 +33,10 @@
                 width: 170px;
                 height: 170px;
                 display: block;
-                background-color: #E7E7E7;
+                background-color: #f3f3f3;
                 position: absolute;
                 border-radius: 50%;
-                z-index: -1;
+                z-index: 1;
                 top: -21px;
                 left: -21px;
             }
